Added configs and commands and stuff, Now its actually "releasable"!!

--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -2,10 +2,10 @@
 ---
 name: DropChest
 main: DropChest.DropChest
-version: 0.98
+version: 0.99
 commands:
-   chance:
-      description: Set the initial chance wether mob can drop ChestDrop larger number means smaller chance
-      usage: /chance 0-99
-      permission: ChestDrop.chance
-      permission-message: You don't have ChestDrop.chance
+   DropChest:
+      description: Main command for DropChest
+      usage: /DropChest chance/location arguments
+      permission: ChestDrop.DropChest
+      permission-message: You don't have ChestDrop.DropChest
